# ungoogled-chromium-windows

./: .gitignore  README.md  build.py  build_llvm.py  downloads.ini  flags.windows.gn  package.py  requirements.txt  ungoogled-chromium-windows.code-workspace
.github/actions/: package.json  pnpm-lock.yaml
.github/actions/7zip-zstd/: action.yml
.github/actions/common-setup/: action.yml
.github/actions/common-teardown/: action.yml
.github/actions/create-chrlauncher-update-files/: action.yml  index.js
.github/actions/stage/: action.yml  execx.js  index.js  index3.js  package.json  pnpm-lock.yaml  tar.js
.github/actions/upload-chromium-package/: action.yml  index.js
.github/actions/winget/: action.yml
.github/workflows/: build.yml  build_llvm.yml  chromium_build.yml  chromium_step.yml  chromium_step_2.yml  llvm-local_build.yml  llvm.yml  main.yml  mimalloc.yml  pull.yml  step.yml  step_llvm.yml
.github/workflows/llvm-local/: step.yml
.github/workflows/mimalloc/: mimalloc.yml
patches/: series
patches/my/: add-flag-to-clear-data-on-exit.patch  customize-hotkeys.patch
patches/ungoogled-chromium/windows/: windows-fix-encoding.patch
patches/uwx/: RobRich-llvm-avx2-modified.patch  RobRich-llvm-avx2.patch  RobRich-win64-avx2-no-polly.patch  RobRich-win64-avx2.patch  gclient.patch  llvm-build-fix.patch  skia-do-not-build-avx512-source-patch.patch  skia-do-not-build-avx512-try-2.patch  skia-do-not-build-avx512.patch  win64-znver3.patch
