thin_lto_enable_cache = false
enable_media_drm_storage = true
enable_widevine = true
bundle_widevine_cdm = false
ignore_missing_widevine_signing_cert = true
enable_remoting = false
google_api_key = "no"
google_default_client_id = "no"
google_default_client_secret = "no"
use_official_google_api_keys = false
treat_warnings_as_errors = false
clang_use_chrome_plugins = false
enable_nacl = false
enable_precompiled_headers = false
win_enable_cfg_guards = true
disable_fieldtrial_testing_config = true
target_os = "win"
enable_media_foundation_widevine_cdm = true
enable_ffmpeg_video_decoders = true
enable_platform_hevc = true
enable_hevc_parser_and_hw_decoder = true
enable_platform_ac3_eac3_audio = true
enable_platform_dolby_vision = true
enable_platform_mpeg_h_audio = true

chrome_pgo_phase=0
enable_swiftshader=false
ffmpeg_branding="Chrome"
is_clang=true
is_component_build=false
is_debug=false
is_official_build=true
proprietary_codecs=true
target_cpu="x64"
use_sysroot=false
dcheck_always_on=false
blink_symbol_level=0
v8_symbol_level=0
symbol_level=0
enable_resource_allowlist_generation = false
enable_rust=false
use_thin_lto=true
thin_lto_enable_optimizations=true
enable_hangout_services_extension=false
enable_mse_mpeg2ts_stream_parser=true
optimize_webui=true
#cc_wrapper="sccache"