enable_media_drm_storage = true
enable_widevine = true
bundle_widevine_cdm = false
ignore_missing_widevine_signing_cert = true

chrome_pgo_phase=0
enable_swiftshader=false
ffmpeg_branding="Chrome"
is_clang=true
is_component_build=false
is_debug=false
is_official_build=true
proprietary_codecs=true
target_cpu="x64"
use_sysroot=false
dcheck_always_on=false
blink_symbol_level=0
v8_symbol_level=0
symbol_level=0
enable_rust=true
use_thin_lto=true
thin_lto_enable_optimizations=true
enable_hangout_services_extension=true
enable_mse_mpeg2ts_stream_parser=true